--- a/allocation/src/main/resources/templates/preferences.html
+++ b/allocation/src/main/resources/templates/preferences.html
@@ -2,33 +2,20 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Projects</title>
+    <title>Preferences</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body class="container">
-    <h1>List of Projects</h1>
-    <table class="table table-striped table-bordered">
-        <thead class="table-primary">
-            <tr>
-                <th>Project Title</th>
-                <th>Project Description</th>
-                <th>Submit Preferences</th>
-            </tr>
-        </thead>
-
-        <tr th:each="project: ${projects}">
-            <td th:text="${project.title}">
-                Title
-            </td>
-            <td th:text="${project.description}">
-                Description
-            </td>
-            <td>
-                <a th:href="@{'/projects/' + ${project.id}}">Submit Preferences</a>
-            </td>
-        </tr>
-    </table>
+    <form method="post" action="/submitPreferences">
+        <label>Project Title</label>
+        <input type="text" name="title" th:value="${title}">
+        <br>
+        <label>Project Description</label>
+        <input type="text" name="description" th:value="${description}">
+        <br>
+        <input type="submit" name="submit" value="Submit">
+    </form>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
