--- a/allocation/src/main/resources/templates/preferences.html
+++ b/allocation/src/main/resources/templates/preferences.html
@@ -9,10 +9,15 @@
 <body class="container">
     <form method="post" action="/submitPreferences">
         <label>Project Title</label>
-        <input type="text" name="title" th:value="${title}">
+        <input type="text" name="title" th:value="${title}" readonly>
         <br>
         <label>Project Description</label>
-        <input type="text" name="description" th:value="${description}">
+        <input type="text" name="description" th:value="${description}" readonly>
+        <br>
+        <label>Student</label>
+        <select>
+            <option th:each="student: ${students}" th:value="${student.id}" th:text="${student.username}"></option>
+        </select>
         <br>
         <input type="submit" name="submit" value="Submit">
     </form>
