--- a/allocation/src/main/resources/templates/submitPreferences.html
+++ b/allocation/src/main/resources/templates/submitPreferences.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body class="container">
-    <form method="post" action="/submitPreferences">
+    <form method="post" th:action="@{'/projects/' + ${project.id}}" th:object="${preference}">
         <label>Project Title</label>
-        <input type="text" name="title" th:value="${title}" readonly>
+        <input type="text" name="title" th:value="${project.title}" readonly>
         <br>
         <label>Project Description</label>
-        <input type="text" name="description" th:value="${description}" readonly>
+        <input type="text" name="description" th:value="${project.description}" readonly>
         <br>
         <label>Student</label>
-        <select>
-            <option th:each="student: ${students}" th:value="${student.id}" th:text="${student.username}"></option>
+        <select th:field="*{studentId}">
+            <option th:each="student: ${students}" th:value="${student.username}" th:text="${student.username}"></option>
         </select>
         <br>
         <input type="submit" name="submit" value="Submit">
