--- a/allocation/src/main/resources/templates/submitPreferences.html
+++ b/allocation/src/main/resources/templates/submitPreferences.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body class="container">
-    <form method="post" th:action="@{'/projects/' + ${project.id}}" th:object="${preference}">
+    <form method="post" th:action="@{'/projects/' + ${project.id}}">
         <label>Project Title</label>
         <input type="text" name="title" th:value="${project.title}" readonly>
         <br>
@@ -15,7 +15,7 @@
         <input type="text" name="description" th:value="${project.description}" readonly>
         <br>
         <label>Student</label>
-        <select th:field="*{studentId}">
+        <select name="username">
             <option th:each="student: ${students}" th:value="${student.username}" th:text="${student.username}"></option>
         </select>
         <br>
