--- a/allocation/src/main/resources/templates/listPreferences.html
+++ b/allocation/src/main/resources/templates/listPreferences.html
@@ -6,25 +6,28 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
-<body class="container">
-    <h1>List of Preferences</h1>
-    <table class="table table-striped table-bordered">
-        <thead class="table-primary">
+<body>
+    <div class="container" style="margin-top: 50px;">
+        <h1 style="margin-bottom: 20px;">List of Preferences</h1>
+        <table class="table table-striped table-bordered">
+            <thead class="table-primary">
             <tr>
                 <td>Student ID</td>
                 <td>Preferences</td>
             </tr>
-        </thead>
+            </thead>
 
-        <tr th:each="student: ${students}">
-            <td th:text="${student.username}"></td>
-            <td>
-                <ul th:each="preference: ${student.preferences}" th:text="${preference.title}">
+            <tr th:each="student: ${students}">
+                <td th:text="${student.username}"></td>
+                <td>
+                    <ul class="list-group" th:each="preference: ${student.preferences}">
+                        <li class="list-group-item" th:text="${preference.title}"></li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+    </div>
 
-                </ul>
-            </td>
-        </tr>
-    </table>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
