--- a/allocation/src/main/resources/templates/projects.html
+++ b/allocation/src/main/resources/templates/projects.html
@@ -6,29 +6,32 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
-<body class="container">
-    <h1>List of Projects</h1>
-    <table class="table table-striped table-bordered">
-        <thead class="table-primary">
+<body>
+    <div class="container" style="margin-top: 50px;">
+        <h1 style="margin-bottom: 20px;">List of Projects</h1>
+        <table class="table table-striped table-bordered">
+            <thead class="table-primary">
             <tr>
                 <th>Project Title</th>
                 <th>Project Description</th>
                 <th>Submit Preferences</th>
             </tr>
-        </thead>
+            </thead>
 
-        <tr th:each="project: ${projects}">
-            <td th:text="${project.title}">
-                Title
-            </td>
-            <td th:text="${project.description}">
-                Description
-            </td>
-            <td>
-                <a th:href="@{'/projects/' + ${project.id}}">Submit Preferences</a>
-            </td>
-        </tr>
-    </table>
+            <tr th:each="project: ${projects}">
+                <td th:text="${project.title}">
+                    Title
+                </td>
+                <td th:text="${project.description}">
+                    Description
+                </td>
+                <td>
+                    <a th:href="@{'/projects/' + ${project.id}}">Submit Preferences</a>
+                </td>
+            </tr>
+        </table>
+    </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
