--- a/allocation/src/main/resources/templates/submitPreferences.html
+++ b/allocation/src/main/resources/templates/submitPreferences.html
@@ -6,21 +6,28 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
-<body class="container">
-    <form method="post" th:action="@{'/projects/' + ${project.id}}">
-        <label>Project Title</label>
-        <input type="text" name="title" th:value="${project.title}" readonly>
-        <br>
-        <label>Project Description</label>
-        <input type="text" name="description" th:value="${project.description}" readonly>
-        <br>
-        <label>Student</label>
-        <select name="username">
-            <option th:each="student: ${students}" th:value="${student.username}" th:text="${student.username}"></option>
-        </select>
-        <br>
-        <input type="submit" name="submit" value="Submit">
-    </form>
+<body>
+    <div class="container" style="margin-top: 50px;">
+        <h1 style="margin-bottom: 20px;">Submit Preferences</h1>
+        <form method="post" th:action="@{'/projects/' + ${project.id}}">
+            <div class="form-group">
+                <label>Project Title</label>
+                <input class="form-control" type="text" name="title" th:value="${project.title}" readonly>
+            </div>
+            <div class="form-group">
+                <label>Project Description</label>
+                <input class="form-control" type="text" name="description" th:value="${project.description}" readonly>
+            </div>
+            <div class="form-group">
+                <label>Student</label>
+                <select class="form-control" name="username">
+                    <option th:each="student: ${students}" th:value="${student.username}" th:text="${student.username}"></option>
+                </select>
+            </div>
+            <button class="btn btn-primary" type="submit" name="submit">Submit</button>
+        </form>
+    </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
