Added mapping for allocation

--- a/allocation/src/main/resources/templates/listPreferences.html
+++ b/allocation/src/main/resources/templates/listPreferences.html
@@ -26,7 +26,7 @@
                     </ul>
                 </td>
                 <td>
-                    <button>Allocate</button>
+                    <a th:href="@{'/students/'+${student.username}}">Allocate</a>
                 </td>
             </tr>
         </table>
