--- a/allocation/src/main/resources/templates/allocateStudent.html
+++ b/allocation/src/main/resources/templates/allocateStudent.html
@@ -11,13 +11,13 @@
     <thead>
         <tr>
             <th scope ="col">Name</th>
-            <th scope = "col" id = "studentName">Placeholder</th>
+            <th scope = "col" id = "studentName" th:text="${student.username}">Placeholder</th>
         </tr>
     </thead>
-    <tbody th:each="student: ${students}">
-        <tr >
+    <tbody >
+        <tr>
             <td scope = "row">Student ID</td>
-            <td id = "studentId">Placeholder</td>
+            <td id = "studentId" th:text="${student.getId()}">Placeholder</td>
         </tr>
         <tr>
             <td scope= "row">Weight Average Mark (WAM)</td>
@@ -42,4 +42,7 @@
         </div>
     </div>
 </body>
+
+
+
 </html>
