Added allocation functionality (still stuff to do, like removing allocated students from the list for preference submission)

--- a/allocation/src/main/resources/templates/projects.html
+++ b/allocation/src/main/resources/templates/projects.html
@@ -30,6 +30,7 @@
                 </td>
             </tr>
         </table>
+        <a th:href="@{'/listPreferences'}">List of Preferences</a>
     </div>
 
 
