--- a/allocation/src/main/resources/templates/listAllocations.html
+++ b/allocation/src/main/resources/templates/listAllocations.html
@@ -2,25 +2,28 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Allocate Student</title>
+    <title>List of allocations</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
     <div class="container" style="margin-top: 50px;">
-        <h1 th:text="${student.username}" style="margin-bottom: 20px;">Student name</h1>
+        <h1 style="margin-bottom: 20px;">List of allocations</h1>
 
-        <form method="post" th:action="@{'/students/'+${student.username}}">
-            <div class="form-group">
-                <label>Select Project</label>
-                <select class="form-control" name="allocate">
-                    <option th:each="preference: ${student.preferences}" th:value="${preference.title}" th:text="${preference.title}"></option>
-                </select>
-            </div>
-            <button class="btn btn-primary" type="submit">Allocate</button>
-        </form>
+        <table class="table table-striped table-bordered">
+            <thead class="table-primary">
+                <tr>
+                    <td>Student</td>
+                    <td>Allocated to</td>
+                </tr>
+            </thead>
+
+            <tr th:each="student: ${students}">
+                <td th:text="${student.username}"></td>
+                <td th:text="${student.allocatedProject.title}"></td>
+            </tr>
+        </table>
     </div>
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
