--- a/allocation/src/main/resources/templates/listAllocations.html
+++ b/allocation/src/main/resources/templates/listAllocations.html
@@ -23,6 +23,9 @@
                 <td th:text="${student.allocatedProject.title}"></td>
             </tr>
         </table>
+
+        <a th:href="@{'/'}">List of Projects</a>
+        <a th:href="@{'/listPreferences'}">List of Preferences</a>
     </div>
 
     <!-- Optional JavaScript -->
