--- a/allocation/src/main/resources/templates/listPreferences.html
+++ b/allocation/src/main/resources/templates/listPreferences.html
@@ -30,6 +30,9 @@
                 </td>
             </tr>
         </table>
+
+        <a th:href="@{'/'}">List of Projects</a>
+        <a th:href="@{'/listAllocations'}">List of Allocations</a>
     </div>
 
 
