--- a/allocation/src/main/resources/templates/projects.html
+++ b/allocation/src/main/resources/templates/projects.html
@@ -31,6 +31,7 @@
             </tr>
         </table>
         <a th:href="@{'/listPreferences'}">List of Preferences</a>
+        <a th:href="@{'/listAllocations'}">List of Allocations</a>
     </div>
 
 
