--- a/allocation/src/main/resources/templates/allocateStudent.html
+++ b/allocation/src/main/resources/templates/allocateStudent.html
@@ -19,6 +19,10 @@
             </div>
             <button class="btn btn-primary" type="submit">Allocate</button>
         </form>
+
+        <a th:href="@{'/'}">List of Projects</a>
+        <a th:href="@{'/listPreferences'}">List of Preferences</a>
+        <a th:href="@{'/listAllocations'}">List of Allocations</a>
     </div>
 
 
