--- a/allocation/src/main/resources/templates/submitPreferences.html
+++ b/allocation/src/main/resources/templates/submitPreferences.html
@@ -26,6 +26,10 @@
             </div>
             <button class="btn btn-primary" type="submit" name="submit">Submit</button>
         </form>
+
+        <a th:href="@{'/'}">List of Projects</a>
+        <a th:href="@{'/listPreferences'}">List of Preferences</a>
+        <a th:href="@{'/listAllocations'}">List of Allocations</a>
     </div>
 
 
